ZipUrlHelper handles not URL but URI.